--- a/asmi-prem-weather-etl.ipynb
+++ b/asmi-prem-weather-etl.ipynb
@@ -9,7 +9,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import requests\n",
-    "import reverse_geocode \n",
     "import glob\n",
     "import os\n",
     "import tarfile\n",
@@ -19,50 +18,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extraction for 1950 complete.\n",
-      "Extraction for 1951 complete.\n",
-      "Extraction for 1952 complete.\n"
+      "Data Extraction completed Successfully\n"
      ]
     }
    ],
    "source": [
     "base_url = \"https://www.ncei.noaa.gov/data/global-summary-of-the-day/archive/\"\n",
-    "start_year = 1950\n",
+    "start_year =1950\n",
     "end_year = 2000\n",
-    "\n",
     "for year in range(start_year, end_year + 1):\n",
-    "   \n",
+    "    # Create a directory for the current year\n",
+    "    year_directory = f\"./temp/{year}/\"\n",
+    "    os.makedirs(year_directory, exist_ok=True)\n",
+    "\n",
+    "    # Construct the URL for the current year\n",
     "    url = f\"{base_url}{year}.tar.gz\"\n",
-    "\n",
-    " \n",
     "    response = requests.get(url, stream=True)\n",
-    "\n",
-    "   \n",
-    "        # Open the tar archive for the current year\n",
-    "    with tarfile.open(fileobj=response.raw, mode=\"r|gz\") as file:\n",
-    "            # Extract all contents to the current directory\n",
-    "        file.extractall('./temp')\n",
-    "            \n",
-    "        print(f\"Extraction for {year} complete.\")\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = os.getcwd() \n",
-    "csv_files = glob.glob(os.path.join(path, \"./temp/*.csv\")) \n",
-    "df=pd.concat(map(pd.read_csv,csv_files),ignore_index=True)"
+    "    if response.status_code == 200:\n",
+    "        with tarfile.open(fileobj=response.raw, mode=\"r|gz\") as file:\n",
+    "        # Extract all contents to the year-specific directory\n",
+    "            file.extractall(year_directory)\n",
+    "          \n",
+    "    else:\n",
+    "        print(f\"Failed to retrieve data for {year}. Status code: {response.status_code}\")\n",
+    "print(\"Data Extraction completed Successfully\")    "
    ]
   },
   {
@@ -71,55 +57,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.dropna(subset=['NAME'],inplace=True)\n",
-    "df[['LOCATION', 'COUNTRY_CODE']] = df['NAME'].str.split(', ' , n=1, expand=True)\n",
-    "df[['STATE', 'CC']] = df['COUNTRY_CODE'].str.split(' ' , n=1, expand=True)"
+    "path = os.getcwd()\n",
+    "\n",
+    "year_folders = glob.glob(os.path.join(path, \"./temp/*/\"))\n",
+    "\n",
+    "dfs = []\n",
+    "#to loop year folder\n",
+    "for year_folder in year_folders:\n",
+    "    csv_pattern = os.path.join(year_folder, \"*.csv\")\n",
+    "    csv_files = glob.glob(csv_pattern)\n",
+    "   \n",
+    "\n",
+    "    prefixes_to_include = ('7', '99', '69')\n",
+    "    prefix_to_exclude = ('76', '71')\n",
+    "\n",
+    "    for csv_file in csv_files:\n",
+    "        file_name = os.path.basename(csv_file)\n",
+    "        if file_name.startswith(prefixes_to_include) and not file_name.startswith(prefix_to_exclude):\n",
+    "    \n",
+    "   \n",
+    "            \n",
+    "            df = pd.read_csv(csv_file)\n",
+    "\n",
+    "           #to Check for US location but exclude 'Hawaii' and 'Alaska'\n",
+    "            df = df[\n",
+    "                (df['LATITUDE'] >= 24.396308) & (df['LATITUDE'] <= 49.384358) &\n",
+    "                (df['LONGITUDE'] >= -125.000000) & (df['LONGITUDE'] <= -66.934570)\n",
+    "            ]\n",
+    "            df=df[['DATE','PRCP','TEMP','MIN','MAX','LATITUDE','LONGITUDE','NAME']]\n",
+    "            # Appending the DataFrame to the list\n",
+    "            dfs.append(df)\n",
+    "\n",
+    "# Concatenating the list of DataFrames into a single DataFrame\n",
+    "merged_df = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "#Delete the temp folder\n",
+    "shutil.rmtree('./temp')\n",
+    "\n",
+    "merged_df.to_csv('merged_data_filtered.csv', index=False) \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "               DATE   PRCP  TEMP   MIN   MAX  LATITUDE  LONGITUDE  \\\n",
-      "1025     1999-09-04   0.00  76.9  64.0  82.9  40.63300  -74.66700   \n",
-      "1026     1999-09-05  99.99  73.4  64.0  82.9  40.63300  -74.66700   \n",
-      "1027     1999-09-06  99.99  76.8  71.1  86.0  40.63300  -74.66700   \n",
-      "1028     1999-09-07  99.99  74.8  73.0  86.0  40.63300  -74.66700   \n",
-      "1029     1999-09-08   0.00  75.7  71.6  82.4  40.63300  -74.66700   \n",
-      "...             ...    ...   ...   ...   ...       ...        ...   \n",
-      "3645859  1951-12-27   0.00  20.9  10.9  30.9  38.06824  -97.86075   \n",
-      "3645860  1951-12-28   0.00  34.8  27.0  54.0  38.06824  -97.86075   \n",
-      "3645861  1951-12-29   0.00  42.1  32.0  63.0  38.06824  -97.86075   \n",
-      "3645862  1951-12-30   0.00  37.3  27.0  46.9  38.06824  -97.86075   \n",
-      "3645863  1951-12-31   0.00  50.5  25.0  64.9  38.06824  -97.86075   \n",
-      "\n",
-      "                                        NAME  \n",
-      "1025            SOMERSET AIRPORT ASOS, NJ US  \n",
-      "1026            SOMERSET AIRPORT ASOS, NJ US  \n",
-      "1027            SOMERSET AIRPORT ASOS, NJ US  \n",
-      "1028            SOMERSET AIRPORT ASOS, NJ US  \n",
-      "1029            SOMERSET AIRPORT ASOS, NJ US  \n",
-      "...                                      ...  \n",
-      "3645859  HUTCHINSON MUNICIPAL AIRPORT, KS US  \n",
-      "3645860  HUTCHINSON MUNICIPAL AIRPORT, KS US  \n",
-      "3645861  HUTCHINSON MUNICIPAL AIRPORT, KS US  \n",
-      "3645862  HUTCHINSON MUNICIPAL AIRPORT, KS US  \n",
-      "3645863  HUTCHINSON MUNICIPAL AIRPORT, KS US  \n",
-      "\n",
-      "[744250 rows x 8 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_filtered = df[df['CC'].isin(['US']) & ~df['STATE'].isin(['AK', 'HI'])]\n",
-    "df_features=df_filtered[['DATE','PRCP','TEMP','MIN','MAX','LATITUDE','LONGITUDE','NAME']]\n",
-    "print(df_features)\n",
-    "shutil.rmtree('./temp')"
+    "merged_df['DATE'] = pd.to_datetime(merged_df['DATE'])\n",
+    "merged_df['MONTH'] = merged_df['DATE'].dt.month\n",
+    "merged_df['YEAR'] = merged_df['DATE'].dt.year\n",
+    "df_temp = merged_df[merged_df['TEMP'] != 9999.9]\n",
+    "result_temp = df_temp.groupby(['YEAR', 'MONTH'])['TEMP'].agg(['mean', 'median', 'var', 'min', 'max']).reset_index()\n",
+    "df_prcp = merged_df[merged_df['PRCP'] != 99.99]\n",
+    "result_prcp = df_prcp.groupby(['YEAR', 'MONTH'])['PRCP'].agg(['mean', 'median', 'var', 'min', 'max']).reset_index()\n",
+    "weather_stats= pd.merge(result_temp, result_prcp, on=['YEAR', 'MONTH'], suffixes=('_temp', '_prcp'))\n",
+    "weather_stats.to_csv('monthly_weather_stats.csv', index=False)"
    ]
   },
   {
@@ -128,47 +120,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/7s/7j9cxlw57jz9dscyz4mx7p780000gn/T/ipykernel_9621/2234118482.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_features['DATE'] = pd.to_datetime(df_features['DATE'])\n",
-      "/var/folders/7s/7j9cxlw57jz9dscyz4mx7p780000gn/T/ipykernel_9621/2234118482.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_features['year_month'] = df_features['DATE'].dt.to_period('M')\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_features['DATE'] = pd.to_datetime(df_features['DATE'])\n",
-    "df_features['year_month'] = df_features['DATE'].dt.to_period('M')\n",
-    "df_temp = df_features[df_features['TEMP'] != 9999.9]\n",
-    "result_temp = df_temp.groupby('year_month')['TEMP'].agg(['mean', 'median','var','min','max']).reset_index()\n",
-    "df_prcp = df_features[df_features['PRCP'] != 99.99]\n",
-    "result_prcp = df_prcp.groupby('year_month')['PRCP'].agg(['mean', 'median','var','min','max']).reset_index()\n",
-    "temp_prcp= pd.merge(result_temp, result_prcp, on='year_month', suffixes=('_temp', '_prcp'))\n",
-    "temp_prcp.to_csv('monthly_weather_stats.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "591"
+       "612"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
